--- a/rm-engine-ms-common.yml
+++ b/rm-engine-ms-common.yml
@@ -6,6 +6,11 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/rmengine
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+
 server:
   port: 8090
 
