--- a/rm-engine-web.yml
+++ b/rm-engine-web.yml
@@ -18,7 +18,7 @@ spring:
 client:
   registerWithEureka: false
   serviceUrl:
-    defaultZone: http://localhost:8070/eureka/
+    defaultZone: http://localhost:8070/
 
 zuul:
   routes:
