--- a/rm-engine-ms-character.yml
+++ b/rm-engine-ms-character.yml
@@ -1,22 +1,25 @@
 configuration:
   projectName: rm-engine-ms-character
 
+spring:
+  application:
+    name: rm-engine-ms-common
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/rmengine
+
 server:
   port: 8092
-
-management:
-  context-path: /actuator
-  security.enabled: false
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8070/eureka/
 
+management:
+  context-path: /actuator
+  security:
+    enabled: false
+
 logging:
   level.org: INFO
-
-spring:
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/rmengine
