--- a/rm-engine-web.yml
+++ b/rm-engine-web.yml
@@ -45,8 +45,8 @@ zuul:
       path: /api/manouver-dynamic/**
       url: http://localhost:8097/
 
-ribbon:
-  eureka:
-    enabled: true
-    ReadTimeout: 20000
-    ConnectTimeout: 20000
+#ribbon:
+#  eureka:
+#   enabled: true
+#    ReadTimeout: 20000
+#    ConnectTimeout: 20000
