--- a/rm-engine-web.yml
+++ b/rm-engine-web.yml
@@ -15,10 +15,15 @@ spring:
   thymeleaf:
     cache: false
 
-client:
-  registerWithEureka: false
-  serviceUrl:
-    defaultZone: http://localhost:8070/
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka
+
+#client:
+#  registerWithEureka: false
+#  serviceUrl:
+#    defaultZone: http://localhost:8070/eureka
 
 zuul:
   routes:
