--- a/rm-engine-eureka.yml
+++ b/rm-engine-eureka.yml
@@ -7,6 +7,8 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
 
 server:
   port: 8070
