--- a/rm-engine-ms-common.yml
+++ b/rm-engine-ms-common.yml
@@ -12,9 +12,17 @@ server:
   port: 8090
 
 eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 10
+    metadataMap:
+      instanceId: http://localhost:8070/eureka/
   client:
-    serviceUrl:
-      defaultZone: http://localhost:8070/eureka/
+    registryFetchIntervalSeconds: 5
+
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8070/eureka/
 
 management:
   context-path: /actuator
