--- a/rm-engine-web.yml
+++ b/rm-engine-web.yml
@@ -1,61 +1,63 @@
 configuration:
   projectName: rm-engine-web
 
-server:
-  port: 8080
-  tomcat:
-      uri-encoding: UTF-8
-
-management:
-  context-path: /actuator
-  security.enabled: false
-
-#no cache templates under development phase
 spring:
+  application:
+    name: rm-engine-web
   thymeleaf:
+    #no cache templates under development phase
     cache: false
+
+zuul:
+  prefix: /api
+  routes:
+    # Error: eureka discovery dont resove server list (see issues):
+    #rm-engine-ms-common: /common/**
+    common:
+      path: /common/**
+      url: http://localhost:8090/
+    campaign:
+      path: /campaign/**
+      url: http://localhost:8091/
+    character:
+      path: /character/**
+      serviceId: rm-engine-ms-character
+    creation:
+      path: /creation/**
+      url: http://localhost:8093/
+    combat:
+      path: /combat/**
+      url: http://localhost:8095/
+    maneuver-dynamic:
+      path: /manouver-static/**
+      url: http://localhost:8096/
+    maneuver-static:
+      path: /manouver-dynamic/**
+      url: http://localhost:8097/
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8070/eureka
+      defaultZone: http://localhost:8070/eureka/
 
-#client:
-#  registerWithEureka: false
-#  serviceUrl:
-#    defaultZone: http://localhost:8070/eureka
+#ribbon:
+#  eureka:
+#    enabled: true
 
-zuul:
-  routes:
-    common:
-      path: /api/common/**
-      http://localhost:8090/
-      #serviceId: rm-engine-ms-common
-      #stripPrefix: false
-    campaign:
-      path: /api/campaign/**
-      url: http://localhost:8091/
-    character:
-      path: /api/character/**
-      serviceId: rm-engine-ms-character
-    creation:
-      path: /api/creation/**
-      url: http://localhost:8093/
-    combat:
-      path: /api/combat/**
-      url: http://localhost:8095/
-    maneuver-dynamic:
-      path: /api/manouver-static/**
-      url: http://localhost:8096/
-    maneuver-static:
-      path: /api/manouver-dynamic/**
-      url: http://localhost:8097/
+#ribbon:
+#  eureka:
+#   enabled: true
+#    ReadTimeout: 20000
+#    ConnectTimeout: 20000
 
-ribbon:
-  eureka:
-   enabled: true
-    ReadTimeout: 20000
-    ConnectTimeout: 20000
+server:
+  port: 8080
+  tomcat:
+    uri-encoding: UTF-8
 
-#logging:
-#  level.org: DEBUG
+management:
+  context-path: /admin
+  security.enabled: false
+
+logging:
+  level.org: INFO
